--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
     
+    <div id="main">
+        <section class="section-1">
+            <nav id="navbar">
+                <div class="logo">
+                    <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
+                </div>
+                <div class="nav-buttons">
+                    <button class="nav-btn">Work</button>
+                    <button class="nav-btn">Studio</button>
+                    <button class="nav-btn">Contact</button>
+                </div>
+            </nav>
+        </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
+
