--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
                     <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
                 </div>
                 <div class="nav-buttons">
-                    <button class="nav-btn">Work</button>
-                    <button class="nav-btn">Studio</button>
-                    <button class="nav-btn">Contact</button>
+                    <button class="nav-btn"><a href="#">Work</a></button>
+                    <button class="nav-btn"><a href="#">Studio</a></button>
+                    <button class="nav-btn"><a href="#">Contact</a></button>
                 </div>
             </nav>
+            <div id="hero">
+                <div class="left">
+                    <h2>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and environments.</h2>
+                </div>
+                <div class="right">
+                    <h1>Spaces<br> that<br> inspire</h1>
+                </div>
+            </div>
         </section>
     </div>
 
