--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sundown studio [clone]</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="asset/download.png">
 </head>
 <body>
     
@@ -27,6 +28,13 @@
                 <div class="right">
                     <h1>Spaces<br> that<br> inspire</h1>
                 </div>
+            </div>
+            <div class="hero-animation-shape">
+                <div class="shape-1"></div>
+                <div class="shape-2"></div>
+            </div>
+            <div class="video-container">
+                <!-- <video src="asset/c72af10b.mp4" autoplay loop muted></video> -->
             </div>
         </section>
     </div>
