--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="hero-animation-shape">
                 <div class="shape-1"></div>
                 <div class="shape-2"></div>
+                <div class="shape-3"></div>
             </div>
             <div class="video-container">
                 <!-- <video src="asset/c72af10b.mp4" autoplay loop muted></video> -->
