--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
             </div>
             <div class="hero-animation-shape">
-                <div class="shape-1"></div>
-                <div class="shape-2"></div>
+                <!-- <div class="shape-1"></div> -->
+                <!-- <div class="shape-2"></div> -->
                 <div class="shape-3"></div>
             </div>
             <div class="video-container">
