--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sundown studio [clone]</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="asset/download.png">
-</head>
-<body>
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="asset/download.png" />
+  </head>
+  <body>
     <div id="main">
-        <section class="section-1">
+      <section class="section-1">
             <nav id="navbar">
                 <div class="logo">
                     <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
@@ -38,9 +41,49 @@
                 <video src="asset/c72af10b.mp4" autoplay loop muted></video>
             </div>
         </section>
+
+        <!-- -----------------section-2--------------- -->
+
+
+      <section class="section-2">
+        <div class="moving-texts">
+          <div class="moving-text-container">
+            <h1>EXPERIENCES</h1>
+            <div class="circle"></div>
+            <h1>CONTENT</h1>
+            <div class="circle"></div>
+            <h1>ENVIRONMENT</h1>
+            <div class="circle"></div>
+          </div>
+          <div class="moving-text-container">
+            <h1>EXPERIENCES</h1>
+            <div class="circle"></div>
+            <h1>CONTENT</h1>
+            <div class="circle"></div>
+            <h1>ENVIRONMENT</h1>
+            <div class="circle"></div>
+          </div>
+          <div class="moving-text-container">
+            <h1>EXPERIENCES</h1>
+            <div class="circle"></div>
+            <h1>CONTENT</h1>
+            <div class="circle"></div>
+            <h1>ENVIRONMENT</h1>
+            <div class="circle"></div>
+          </div>
+        </div>
+        <div class="content-pg2">
+            <div class="left-pg2">
+                <h1>We are a group of design-driven, goal-focused creators, producers, and designers who believe that the details make all the difference.</h1>
+            </div>
+            <div class="right-pg2">
+                <div class="right-container-pg2">kj</div>
+            </div>
+        </div>
+      </section>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="script.js"></script>
-</body>
-</html> 
-
+  </body>
+</html>
