--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="main">
-      <section class="section-1">
+      <!-- <section class="section-1">
             <nav id="navbar">
                 <div class="logo">
                     <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
@@ -40,7 +40,7 @@
             <div class="video-container">
                 <video src="asset/c72af10b.mp4" autoplay loop muted></video>
             </div>
-        </section>
+        </section> -->
 
         <!-- -----------------section-2--------------- -->
 
