--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="main">
-      <section class="section-1">
+      <!-- <section class="section-1">
             <nav id="navbar">
                 <div class="logo">
                     <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
@@ -40,7 +40,7 @@
             <div class="video-container">
                 <video src="asset/c72af10b.mp4" autoplay loop muted></video>
             </div>
-        </section>
+        </section> -->
 
         <!-- -----------------section-2--------------- -->
 
@@ -85,6 +85,68 @@
             <div class="pg2-animation">
               <div class="pg2-shape"></div>
             </div>
+        </div>
+        
+      </section>
+
+      <section class="section-3">
+        <div class="featured-projects_section">
+          <div class="featured-heading">
+            <div class="bullet-point"></div>
+            <p>FEATURED PROJECTS</p>
+          </div>
+          <div class="featured-projects">
+            <div class="project">
+              <h1>50th Aniversary</h1>
+              <div class="project-for">
+                <p>NIKE</p>
+                <p>Environment</p>
+              </div>
+            </div>
+            <div class="project">
+              <h1>SOHONYO</h1>
+              <div class="project-for">
+                <p>ARC`TERYX</p>
+                <p>Environment</p>
+              </div>
+              
+            </div>
+            <div class="project">
+              <h1>Air Force 12021</h1>
+              <div class="project-for">
+                <p>NIKE</p>
+                <p>Environment</p>
+              </div>
+            </div>
+            <div class="project">
+              <h1>Makers Studio HOI</h1>
+              <div class="project-for">
+                <p>NIKE</p>
+                <p>Experimential</p>
+              </div>
+            </div>
+            <div class="project">
+              <h1>SOHO 2023</h1>
+              <div class="project-for">
+                <p>CONVERSE</p>
+                <p>Environment</p>
+              </div>
+            </div>
+            <div class="project">
+              <h1>Play New Kidvision</h1>
+              <div class="project-for">
+                <p>NIKE</p>
+                <p>Environment</p>
+              </div>
+            </div>
+            <div class="project">
+              <h1>NYFW Popup</h1>
+              <div class="project-for">
+                <p>AFTERPAY</p>
+                <p>Experimential</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
