--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sundown studio [clone]</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
@@ -45,8 +46,8 @@
         <!-- -----------------section-2--------------- -->
 
 
-      <section class="section-2">
-        <div class="moving-texts">
+      <!-- <section class="section-2"> -->
+        <!-- <div class="moving-texts">
           <div class="moving-text-container">
             <h1>EXPERIENCES</h1>
             <div class="circle"></div>
@@ -71,8 +72,8 @@
             <h1>ENVIRONMENT</h1>
             <div class="circle"></div>
           </div>
-        </div>
-        <div class="content-pg2">
+        </div> -->
+        <!-- <div class="content-pg2">
             <div class="left-pg2">
                 <h1>We are a group of design-driven, goal-focused creators, producers, and designers who believe that the details make all the difference.</h1>
             </div>
@@ -85,7 +86,7 @@
             <div class="pg2-animation">
               <div class="pg2-shape"></div>
             </div>
-        </div>
+        </div> -->
         
       </section>
 
@@ -97,6 +98,7 @@
           </div>
           <div class="featured-projects">
             <div class="project">
+              <div class="overlay"></div>
               <h1>50th Aniversary</h1>
               <div class="project-for">
                 <p>NIKE</p>
@@ -104,6 +106,7 @@
               </div>
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>SOHONYO</h1>
               <div class="project-for">
                 <p>ARC`TERYX</p>
@@ -112,6 +115,7 @@
               
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>Air Force 12021</h1>
               <div class="project-for">
                 <p>NIKE</p>
@@ -119,6 +123,7 @@
               </div>
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>Makers Studio HOI</h1>
               <div class="project-for">
                 <p>NIKE</p>
@@ -126,6 +131,7 @@
               </div>
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>SOHO 2023</h1>
               <div class="project-for">
                 <p>CONVERSE</p>
@@ -133,6 +139,7 @@
               </div>
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>Play New Kidvision</h1>
               <div class="project-for">
                 <p>NIKE</p>
@@ -140,12 +147,17 @@
               </div>
             </div>
             <div class="project">
+              <div class="overlay"></div>
               <h1>NYFW Popup</h1>
               <div class="project-for">
                 <p>AFTERPAY</p>
                 <p>Experimential</p>
               </div>
             </div>
+            <button class="all-project-btn">
+              <h3>All project</h3>
+              <i class="fa-solid fa-arrow-right-long"></i>
+            </button>
           </div>
         </div>
       </section>
