--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <link rel="icon" href="asset/download.png" />
   </head>
   <body>
+    <div id="fixed-images">
+
+    </div>
     <div id="main">
-      <!-- <section class="section-1">
+      <section class="section-1">
             <nav id="navbar">
                 <div class="logo">
                     <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
@@ -41,13 +44,13 @@
             <div class="video-container">
                 <video src="asset/c72af10b.mp4" autoplay loop muted></video>
             </div>
-        </section> -->
+        </section>
 
         <!-- -----------------section-2--------------- -->
 
 
-      <!-- <section class="section-2"> -->
-        <!-- <div class="moving-texts">
+      <section class="section-2">
+        <div class="moving-texts">
           <div class="moving-text-container">
             <h1>EXPERIENCES</h1>
             <div class="circle"></div>
@@ -72,8 +75,8 @@
             <h1>ENVIRONMENT</h1>
             <div class="circle"></div>
           </div>
-        </div> -->
-        <!-- <div class="content-pg2">
+        </div> 
+        <div class="content-pg2">
             <div class="left-pg2">
                 <h1>We are a group of design-driven, goal-focused creators, producers, and designers who believe that the details make all the difference.</h1>
             </div>
@@ -86,7 +89,7 @@
             <div class="pg2-animation">
               <div class="pg2-shape"></div>
             </div>
-        </div> -->
+        </div>
         
       </section>
 
@@ -97,7 +100,7 @@
             <p>FEATURED PROJECTS</p>
           </div>
           <div class="featured-projects">
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1554350747-ec45fd24f51b?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>50th Aniversary</h1>
               <div class="project-for">
@@ -105,7 +108,7 @@
                 <p>Environment</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1705951430866-0d59c7135e1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNXx8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>SOHONYO</h1>
               <div class="project-for">
@@ -114,7 +117,7 @@
               </div>
               
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1695131020120-9a3c36d9146b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDh8aVVJc25WdGpCMFl8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>Air Force 12021</h1>
               <div class="project-for">
@@ -122,7 +125,7 @@
                 <p>Environment</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1705651460001-1aef6b434bd4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDEyfE04alZiTGJUUndzfHxlbnwwfHx8fHw%3D">
               <div class="overlay"></div>
               <h1>Makers Studio HOI</h1>
               <div class="project-for">
@@ -130,7 +133,7 @@
                 <p>Experimential</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1705951501021-a89160066251?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDZ8eEh4WVRNSExnT2N8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>SOHO 2023</h1>
               <div class="project-for">
@@ -138,7 +141,7 @@
                 <p>Environment</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1705927827993-b73ba539bb63?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE2fHhIeFlUTUhMZ09jfHxlbnwwfHx8fHw%3D">
               <div class="overlay"></div>
               <h1>Play New Kidvision</h1>
               <div class="project-for">
@@ -146,7 +149,7 @@
                 <p>Environment</p>
               </div>
             </div>
-            <div class="project">
+            <div class="project" data-image="https://images.unsplash.com/photo-1704292672006-4e7d032e7fd1?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDI3fHhqUFI0aGxrQkdBfHxlbnwwfHx8fHw%3D">
               <div class="overlay"></div>
               <h1>NYFW Popup</h1>
               <div class="project-for">
@@ -154,11 +157,11 @@
                 <p>Experimential</p>
               </div>
             </div>
-            <button class="all-project-btn">
-              <h3>All project</h3>
-              <i class="fa-solid fa-arrow-right-long"></i>
-            </button>
           </div>
+          <button class="all-project-btn">
+            <h3>All project</h3>
+            <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
         </div>
       </section>
     </div>
@@ -166,6 +169,6 @@
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
