--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <link rel="icon" href="asset/download.png" />
   </head>
   <body>
-    <div id="fixed-images">
-
-    </div>
+    <div id="fixed-images"></div>
     <div id="main">
       <section class="section-1">
             <nav id="navbar">
@@ -100,7 +98,7 @@
             <p>FEATURED PROJECTS</p>
           </div>
           <div class="featured-projects">
-            <div class="project" data-image="https://images.unsplash.com/photo-1554350747-ec45fd24f51b?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+            <div id="project1" class="project" data-image="https://images.unsplash.com/photo-1554350747-ec45fd24f51b?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>50th Aniversary</h1>
               <div class="project-for">
@@ -117,7 +115,7 @@
               </div>
               
             </div>
-            <div class="project" data-image="https://images.unsplash.com/photo-1695131020120-9a3c36d9146b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDh8aVVJc25WdGpCMFl8fGVufDB8fHx8fA%3D%3D">
+            <div class="project" data-image="https://images.unsplash.com/photo-1705959708017-fa4400b1c8a0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOHx8fGVufDB8fHx8fA%3D%3D">
               <div class="overlay"></div>
               <h1>Air Force 12021</h1>
               <div class="project-for">
