--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="fixed-images"></div>
+    
     <div id="main">
       <section class="section-1">
             <nav id="navbar">
@@ -162,7 +163,13 @@
           </button>
         </div>
       </section>
+      <section class="section-4"></section>
+      <section class="section-5"></section>
     </div>
+    <div class="footer">
+      <h1>Sundown</h1>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
