Completed the footer

--- a/index.html
+++ b/index.html
@@ -167,7 +167,30 @@
       <section class="section-5"></section>
     </div>
     <div class="footer">
+      <div class="footer-info">
+        <div class="footer-left">
+          <h2>Work</h2>
+          <h2>Studio</h2>
+          <h2>Contact</h2>
+        </div>
+        <div class="footer-right">
+
+          <div class="right-info">
+            <h4>Get industry insights and creative inspiration to your inbox.</h4>
+            <div class="input-box">
+              <input type="text" placeholder="Email address">
+              <i class="fa-solid fa-arrow-right-long"></i>
+          </div>
+          </div>
+        </div>
+      </div>
       <h1>Sundown</h1>
+      <div class="social-links">
+        <h5>Copyright &#169; Sundown Studio</h5>
+        <h5><i class="fa-regular fa-map"></i> Broklyn, NY</h5>
+        <h5>Instagram</h5>
+        <h5>Linkedin</h5>
+      </div>
     </div>
     
 
