Reponsive navbar Complete

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
   <body>
     <div id="fixed-images"></div>
 
-    <div class="ham-menu">
-      <div class="menu-container"></div>
-    </div>
+    
 
     <div id="main">
+      <div class="ham-menu">
+        <div class="menu-container">
+          <div class="cont">
+            <h1>WORK</h1>
+            <h1>STUDIO</h1>
+            <h1>CONTACT</h1>
+          </div>
+          </div>
+      </div>
       <section class="section-1">
         <nav id="navbar">
           <div class="logo">
@@ -344,6 +351,7 @@
         <h5>Linkedin</h5>
       </div>
     </div>
+   
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <!-- <script
