--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <button class="menu-btn"><i class="fa-solid fa-bars"></i> Menu</button>
         </nav>
-        <!-- <div id="hero">
+        <div id="hero">
           <div class="left">
             <h2>
               Sundown is a multi-disciplinary studio focused on creating unique,
@@ -76,7 +76,7 @@
         </div>
         <div class="video-container">
           <video src="asset/c72af10b.mp4" autoplay loop muted></video>
-        </div> -->
+        </div>
       </section>
 
       <section class="section-2">
